feat: add fzf for tmux sessions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,10 @@ bind-key -n M-z run-shell "tmux_sessions a code 2> /dev/null"
 bind-key -n M-x run-shell "tmux_sessions a run1 2> /dev/null"
 bind-key -n M-c run-shell "tmux_sessions a run2 2> /dev/null"
 
+bind-key -n C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+
+bind-key -n C-k command-prompt -p "Enter session name: " "run-shell 'tmux_sessions a %1'"
+
 bind -r 1 run-shell "tmux_sessions a 1 2> /dev/null"
 bind -r 2 run-shell "tmux_sessions a 2 2> /dev/null"
 bind -r 3 run-shell "tmux_sessions a 3 2> /dev/null"
@@ -41,7 +45,5 @@ bind -r 6 run-shell "tmux_sessions a 6 2> /dev/null"
 bind -r 7 run-shell "tmux_sessions a 7 2> /dev/null"
 bind -r 8 run-shell "tmux_sessions a 8 2> /dev/null"
 bind -r 9 run-shell "tmux_sessions a 9 2> /dev/null"
-
-bind-key -n M-f command-prompt -p "Enter session name: " "run-shell 'tmux_sessions a %1'"
 
 set-option -g default-shell /bin/zsh
