super cool additions (new theme + enhanced tmux experience)

--- a/config/kitty/ring0-light.conf
+++ b/config/kitty/ring0-light.conf
@@ -1,13 +1,13 @@
 # vim:ft=kitty
 
 # The basic colors
-foreground              #202020
-background              #F5F5F5
+foreground              #000000
+background              #eff1f5
 selection_foreground    #F5F5F5
 selection_background    #202020
 
 # Cursor colors
-cursor                  #6200ee
+cursor                  #8839ef
 cursor_text_color       #000000
 
 # URL underline color when hovering with mouse
@@ -44,28 +44,28 @@ color0 #202020
 color8 #A0A0A0
 
 # red
-color1 #FF4500
-color9 #FF4500
+color1 #d20f39
+color9 #d20f39
 
 # green
-color2 #32CD32
-color10 #32CD32
+color2 #40a02b
+color10 #40a02b
 
 # yellow
-color3 #FFD700
-color11 #FFD700
+color3 #df8e1d
+color11 #df8e1d
 
 # blue
-color4 #4682B4
-color12 #4682B4
+color4 #1e66f5
+color12 #1e66f5
 
 # magenta
-color5 #9370DB
-color13 #9370DB
+color5 #7287fd
+color13 #7287fd
 
 # cyan
-color6 #40E0D0
-color14 #40E0D0
+color6 #04a5e5
+color14 #04a5e5
 
 # white
 color7 #F5F5F5
