--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,14 +36,6 @@ bind-key -n C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep 
 
 bind-key -n C-k command-prompt -p "Enter session name: " "run-shell 'tmux_sessions a %1'"
 
-bind -r 1 run-shell "tmux_sessions a 1 2> /dev/null"
-bind -r 2 run-shell "tmux_sessions a 2 2> /dev/null"
-bind -r 3 run-shell "tmux_sessions a 3 2> /dev/null"
-bind -r 4 run-shell "tmux_sessions a 4 2> /dev/null"
-bind -r 5 run-shell "tmux_sessions a 5 2> /dev/null"
-bind -r 6 run-shell "tmux_sessions a 6 2> /dev/null"
-bind -r 7 run-shell "tmux_sessions a 7 2> /dev/null"
-bind -r 8 run-shell "tmux_sessions a 8 2> /dev/null"
-bind -r 9 run-shell "tmux_sessions a 9 2> /dev/null"
+bind-key -n C-l display-popup -E "tmux_sessions f"
 
 set-option -g default-shell /bin/zsh
