--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,6 +1,6 @@
-include ./gruber.conf
+include ./ring0-light.conf
 font_family      JetBrainsMono NF
-font_size        24
+font_size        18
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
