--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,8 +34,8 @@ bind-key -n M-c run-shell "tmux_sessions a run2 2> /dev/null"
 
 bind-key -n C-j display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
-bind-key -n C-k command-prompt -p "Enter session name: " "run-shell 'tmux_sessions a %1'"
+bind-key -n C-k display-popup -E "tmux_sessions f"
 
-bind-key -n C-l display-popup -E "tmux_sessions f"
+bind-key -n C-l command-prompt -p "Enter session name: " "run-shell 'tmux_sessions a %1'"
 
 set-option -g default-shell /bin/zsh
