--- a/config/kitty/gruber.conf
+++ b/config/kitty/gruber.conf
@@ -9,7 +9,7 @@
 
 
 # The basic colors
-foreground              #d4d4d4
+foreground              #CDD6F4
 background              #181818
 selection_foreground    #181818
 selection_background    #F5F5F5
